Fix dynamic inner alignment

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/imagefield/ImageField.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/imagefield/ImageField.css
@@ -3,6 +3,9 @@
   margin-left: @mandatory-indicator-width;
 
   & > .image {
+    /* vertical-align-bottom is necessary to remove the bottom margin of the image */
+    vertical-align: bottom;
+
     &.autofit {
       max-width: 100%;
       max-height: 100%;
@@ -24,8 +27,9 @@
     }
 
     &.halign-center > .image {
-      left: 0;
-      right: 0;
+      /* Workaround when image is larger than container and autoFit is off, see http://stackoverflow.com/a/19414020 */
+      left: -9999px;
+      right: -9999px;
     }
 
     &.halign-right > .image {
